--- a/appinfo.json
+++ b/appinfo.json
@@ -3,7 +3,7 @@
     "capabilities": [
         ""
     ],
-    "companyName": "eugenes.mobile@gmail.com",
+    "companyName": "appspace.ca",
     "longName": "Pebble app for controlling ecobee thermostat",
     "projectType": "pebblejs",
     "resources": {
